--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@
     padding-top: 40px;
     padding-left: 20px;
     padding-right: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 20px;    
 }
 
 .high-score {
@@ -24,7 +24,7 @@
 .time {
     color: black;
     font-size: 1.5em;
-    padding: 10px 15px;
+    padding: 10px 15px;    
 }
 
 .quiz-body {
@@ -102,9 +102,12 @@
 }
 
 .answer-status {
-    opacity: 0.5;
-    padding: 20px 10px 10px 20px;
+    opacity: 0.8;
+    padding: 20px 10px 10px 0;
     border-top: rgb(202, 194, 194) solid 2.5px;
     text-align: left;
     font-style: italic;
+    margin-top: 20px;
+    font-size: 2em;
+    width: 70%;
 }
